# learn-python

./: LICENSE  README.md  lesson-structure.md  pyproject.toml
lessons/: __init__.py
lessons/lesson01_advanced_functions/: README.md  examples.py  exercises.py  solutions.py  theory.py
lessons/lesson02_decorators/: README.md  examples.py  exercises.py  solutions.py  theory.py
lessons/lesson03_functools/: README.md  examples.py  exercises.py  solutions.py  theory.py
lessons/lesson04_iterators/: README.md  examples.py  exercises.py  solutions.py  theory.py
lessons/lesson05_generators/: README.md  examples.py  exercises.py  theory.py  (+1 more)
module-01-modern-python/: README.md
module-02-functions-advanced/: README.md
module-03-functional-python/: README.md
module-04-collections/: README.md
module-05-object-oriented-python/: README.md
module-06-dataclasses/: README.md
module-07-iterators/: README.md
module-08-generators/: README.md
module-09-context-managers/: README.md
module-10-design-patterns/: README.md
module-11-advanced-typing/: README.md
module-12-async-python/: README.md
module-13-testing/: README.md
module-14-packaging/: README.md
module-15-production-quality/: README.md
notes/: appendix-naming.md  lesson01.md  lesson02.md  lesson03.md  lesson04.md  lesson05.md  lesson06.md  lesson07.md  lesson08.md  lesson09.md  lesson10.md
playground/: scratch.py
tests/: test_lesson01.py  test_lesson02.py  test_lesson03.py  test_lesson04.py  test_lesson05.py  test_lesson06.py  test_lesson07.py  test_lesson08.py  test_lesson09.py  test_lesson10.py
(+89 files in other folders)
